// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > cart > components > CartItemGroupReservation should render accordion 1`] = `
<div
  data-testid="card-list-item"
>
  <div
    class="sg-h5vm8p-addressDetails"
  >
    StoreOpeningHours
    012456789
  </div>
</div>
`;

exports[`engage > cart > components > CartItemGroupReservation should render accordion 2`] = `
<div
  class="sg-1n883za-address"
>
  <div
    class="sg-1ylg789-addressIcon"
  >
    <div
      data-testid="location-icon"
    />
  </div>
  <div>
    <div
      class="sg-1uoiszi-title"
    >
      locations.method.ropis
    </div>
    Location name
  </div>
</div>
`;

exports[`engage > cart > components > CartItemGroupReservation should render only label 1`] = `
<div
  data-testid="card-list-item"
>
  <div
    class="sg-1n883za-address"
  >
    <div
      class="sg-1ylg789-addressIcon"
    >
      <div
        data-testid="location-icon"
      />
    </div>
    <div>
      <div
        class="sg-1uoiszi-title"
      >
        locations.method.ropis
      </div>
      Location name
    </div>
  </div>
</div>
`;
